--- a/public/benchmark3.html
+++ b/public/benchmark3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Benchmark 2</title>
+    <title>Benchmark 3</title>
 
     <style>
       html,
@@ -48,6 +48,10 @@
                 gravity: {y: 0},
                 debug: false
             }
+        },
+        audio: {
+            disableWebAudio: true,
+            noAudio: false
         },
         scene:[Boot,Preloader, MainMenu, LevelMenu, ControlsMenu, SettingsMenu, HelpMenu, GameScene1, GameScene2, GameScene3]
     };
