Audio not autoplatying bug

--- a/public/benchmark3.html
+++ b/public/benchmark3.html
@@ -50,7 +50,7 @@
             }
         },
         audio: {
-            disableWebAudio: true,
+            disableWebAudio: false,
             noAudio: false
         },
         scene:[Boot,Preloader, MainMenu, LevelMenu, ControlsMenu, SettingsMenu, HelpMenu, GameScene1, GameScene2, GameScene3]
