--- a/public/benchmark3.html
+++ b/public/benchmark3.html
@@ -53,7 +53,7 @@
             disableWebAudio: false,
             noAudio: false
         },
-        scene:[Boot,Preloader, MainMenu, LevelMenu, ControlsMenu, SettingsMenu, HelpMenu, GameScene1, GameScene2, GameScene3]
+        scene:[Boot,Preloader, MainMenu, LevelMenu, ControlsMenu, SettingsMenu, HelpMenu, MusicScene, GameScene1, GameScene2, GameScene3]
     };
 
     var game = new Phaser.Game(config);
