Fixed Bug with group object spawning at start, Debug mode enabled, Pickup system added in collectBox

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
             default: 'arcade',
             arcade: {
                 gravity: {y: 0},
-                debug: false
+                debug: true
             }
         },
         audio: {
