--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
             default: 'arcade',
             arcade: {
                 gravity: {y: 0},
-                debug: false
+                debug: true
             }
         },
         audio: {
