--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
       }
 
       #game-container {
-        width: 100%;
+        
         display: flex;
         align-items: center;
         justify-content: center;
       }
 
       #parent-game-container{
-        height: 100%;
+        
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -32,6 +32,7 @@
 
       #game-container > canvas {
         border-radius: 5px;
+        object-fit: contain;
       }
 
     body{
@@ -71,7 +72,7 @@
             default: 'arcade',
             arcade: {
                 gravity: {y: 0},
-                debug: false
+                debug: true
             }
         },
         audio: {
